syntax = "proto3";
option java_multiple_files=true;
option java_generic_services = true;
package com.services.grpc.server.care;

message ProtoAppointment{
  string id = 1;
  string horseId=2;
  string specialistId=3;
}

message AppointmentRequest{
  string horseId=1;
  string specialistId=2;
}

message AppointmentResponse{
  repeated ProtoAppointment appointments=1;
}

message CareIdRequest{
  string id=1;
}

service CareService{
  rpc getHorsesAppointment(CareIdRequest) returns (AppointmentResponse);
  rpc createAppointment(AppointmentRequest) returns (AppointmentResponse);
}